--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -33,14 +33,14 @@ env_logger = "0.7"
 ffi-support = { optional = true, version = "0.4" }
 
 # TODO: Update once crates are available
-vm = { git = "https://github.com/zondax/forest", rev="ba8d94677634bba97b0b49745ecdf227847a3f94" }
-forest_message = { git = "https://github.com/zondax/forest", rev="ba8d94677634bba97b0b49745ecdf227847a3f94" }
-forest_address = { git = "https://github.com/zondax/forest", rev="ba8d94677634bba97b0b49745ecdf227847a3f94" }
-forest_encoding = { git = "https://github.com/zondax/forest", rev="ba8d94677634bba97b0b49745ecdf227847a3f94" }
+forest_vm = { git = "https://github.com/zondax/forest", rev="b1903ba274fc8e5457e71bc88738f17a7a87bc1f" }
+forest_message = { git = "https://github.com/zondax/forest", rev="b1903ba274fc8e5457e71bc88738f17a7a87bc1f" }
+forest_address = { git = "https://github.com/zondax/forest", rev="b1903ba274fc8e5457e71bc88738f17a7a87bc1f" }
+forest_encoding = { git = "https://github.com/zondax/forest", rev="b1903ba274fc8e5457e71bc88738f17a7a87bc1f" }
 
 # TODO: Maybe we can replace these with something leaner
 tiny-bip39 = "0.7.3"
-num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", rev="ba8d94677634bba97b0b49745ecdf227847a3f94"}
+num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", rev="b1903ba274fc8e5457e71bc88738f17a7a87bc1f"}
 
 bip44 = { git = "https://github.com/Zondax/ledger-rs"}
 
