--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = "1.0"
 serde_json = "1.0"
 libsecp256k1 = "0.3.5"
 hex = "0.4"
+base64 = "0.12.0"
 js-sys = "0.3.37"
 wasm-bindgen-futures = "0.4.10"
 serde = { version = "1.0", features = ["derive"] }
