--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,27 +251,26 @@ workflows:
           <<: *no-tags
       - tests_rust:
           <<: *no-tags
-
       - tests_ffi:
           <<: *no-tags
           requires:
             - build
-            - test_rust
+            - tests_rust
       - tests_wasm:
           <<: *no-tags
           requires:
             - build
-            - test_rust
+            - tests_rust
       - tests_service:
           <<: *no-tags
           requires:
             - build
-            - test_rust
+            - tests_rust
       - tests_ledger:
           <<: *no-tags
           requires:
             - build
-            - test_rust
+            - tests_rust
 
   release:
     jobs:
