adding libusb back

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,6 +154,8 @@ jobs:
     steps:
       - checkout
       - restore-sccache-cache
+
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev curl
       - run: cargo build
       - run:
           name: patch configuration file
@@ -251,6 +253,7 @@ workflows:
           <<: *no-tags
       - tests_rust:
           <<: *no-tags
+
       - tests_ffi:
           <<: *no-tags
           requires:
