--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,8 +155,7 @@ jobs:
       - checkout
       - restore-sccache-cache
 
-      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev curl
-      - run: cargo build
+      - run: cargo build --manifest-path service/Cargo.toml
       - run:
           name: patch configuration file
           command: |
@@ -169,7 +168,7 @@ jobs:
           name: start service
           background: true
           command: |
-            cargo run -- start
+            cargo run --manifest-path service/Cargo.toml -- start
       - run:
           name: install node dependencies
           command: |
