Put nonce cache behind a feature flag

--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -18,7 +18,7 @@ tokio = { version = "0.2", features = ["full", "time"] }
 reqwest = { version = "0.10.1", features = ["json", "gzip"] }
 warp = "0.2.1"
 jsonrpc-core = "14.0.5"
-lru = "0.4.3"
+lru = { optional = true, version = "0.4.3" }
 hex = "0.4"
 lazy_static = "1.4.0"
 libsecp256k1 = "0.3.4"
@@ -34,3 +34,7 @@ version = "0.5.2"
 abscissa_core = { version = "0.5.1", features = ["testing"] }
 once_cell = "1.2"
 futures-await-test = "0.3"
+
+[features]
+cache-nonce = ["lru"]
+default = []
