--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -269,6 +269,7 @@ workflows:
           requires:
             - build
             - tests_rust
+            - tests_wasm
 
   release:
     jobs:
