Add fuzz targets (#166)
* minimal fuzzing target+example

* Add fuzz targets

* Delete README-fuzzing.md

Co-authored-by: Juan Leni <juan.leni@zondax.ch>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = [
     "signer",
     "signer-ffi",
     "signer-wasm",
-    "ledger"
+    "ledger",
+    "hfuzz-signer",
 ]
 
 [profile.release]
