--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -26,7 +26,7 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.16"
 
 ledger-transport = { git = "https://github.com/Zondax/ledger-rs" }
-bip44 = { git = "https://github.com/Zondax/ledger-rs" }
+zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
 
 # For wasm compiling
 [target.'cfg(target_arch = "wasm32")'.dependencies]
