--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -45,7 +45,7 @@ filecoin-signer = { path = "../signer" }
 # ledger app
 filecoin-signer-ledger = { path = "../ledger" }
 
-bip44 = { git = "https://github.com/Zondax/ledger-rs" }
+zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
 
 [dependencies.wasm-bindgen]
 version = "^0.2"
