--- a/signer-js/package.json
+++ b/signer-js/package.json
@@ -1,13 +1,13 @@
 {
   "name": "signer-js",
   "version": "1.0.0",
-  "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint src/**"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Zondax <info@zondax.ch>",
+  "license": "Apache-2.0",
   "dependencies": {
     "base32-decode": "^1.0.0",
     "base32-encode": "^1.1.1",
@@ -18,6 +18,12 @@
     "secp256k1": "^4.0.1"
   },
   "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.21.1",
     "mocha": "^7.2.0"
+  },
+  "eslintConfig": {
+    "extends": "airbnb-base"
   }
 }
