--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
+    "test:js": "env PURE_JS=True mocha",
     "test:spec": "mocha test/test.spec.js"
   },
   "repository": {
