--- a/signer-js/package.json
+++ b/signer-js/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "signer-js",
-  "version": "1.0.0",
+  "name": "@zondax/filecoin-signer-js",
+  "version": "0.2.0",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha",
     "lint": "eslint src/**"
   },
   "author": "Zondax <info@zondax.ch>",
