--- a/signer-wasm/js/package.json
+++ b/signer-wasm/js/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "signer-js",
-  "version": "1.0.0",
+  "name": "@zondax/filecoin-signer-js",
+  "version": "0.2.0",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha",
     "lint": "eslint src/**"
   },
   "author": "Zondax <info@zondax.ch>",
@@ -14,7 +13,7 @@
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
     "blake2": "^4.0.1",
-    "borc": "^2.1.2",
+    "ipld-dag-cbor": "^0.15.3",
     "secp256k1": "^4.0.1"
   },
   "devDependencies": {
