--- a/examples/service_jsonrpc/package.json
+++ b/examples/service_jsonrpc/package.json
@@ -13,7 +13,7 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "bip32": "^2.0.5",
-    "blake2": "^4.0.0",
+    "blakejs": "^1.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
