Show openssl version and use latest reqwest version;

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
           command: |
             rustc --version
             cargo --version
+            openssl version
             cargo test --lib --all-features
       # No need to save this in cache
 
