--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
-    "blake2": "^4.0.0",
+    "blakejs": "^1.1.0",
     "mocha": "^7.1.1",
     "secp256k1": "^4.0.0"
   }
