--- a/signer-wasm/js/package.json
+++ b/signer-wasm/js/package.json
@@ -12,15 +12,17 @@
     "base32-encode": "^1.1.1",
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
-    "blake2": "^4.0.1",
+    "blakejs": "^1.1.0",
     "ipld-dag-cbor": "^0.15.3",
     "secp256k1": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.21.1",
-    "mocha": "^7.2.0"
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-import": "^2.21.2",
+    "mocha": "^7.2.0",
+    "prettier": "^2.0.5"
   },
   "eslintConfig": {
     "extends": "airbnb-base"
