--- a/signer-wasm/js/package.json
+++ b/signer-wasm/js/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "base32-decode": "^1.0.0",
     "base32-encode": "^1.1.1",
+    "bignum": "^0.13.1",
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
     "blakejs": "^1.1.0",
@@ -19,8 +20,8 @@
   "devDependencies": {
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^7.2.0",
     "prettier": "^2.0.5"
   },
