--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Zondax <info@zondax.ch>"]
 edition = "2018"
 license = "Apache-2.0"
-repository = "https://github.com/Zondax/filecoin-rs"
+repository = "https://github.com/Zondax/filecoin-signing-tools"
 description ="Temporary lib used for compatibility with wasm"
 
 [dependencies]
