--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -4,8 +4,8 @@ description = "Library to integrate with the Ledger Filecoin app"
 version = "0.10.0"
 license = "Apache-2.0"
 authors = ["Zondax GmbH <info@zondax.ch>"]
-homepage = "https://github.com/ZondaX/filecoin-rs"
-repository = "https://github.com/ZondaX/filecoin-rs"
+homepage = "https://github.com/ZondaX/filecoin-signing-tools"
+repository = "https://github.com/ZondaX/filecoin-signing-tools"
 readme = "README.md"
 categories  = ["authentication", "cryptography"]
 keywords = ["ledger", "nano", "apdu", "filecoin"]
