--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -4,7 +4,7 @@ authors = ["Zondax <info@zondax.ch>"]
 version = "0.1.0"
 edition = "2018"
 license = "Apache-2.0"
-repository = "https://github.com/Zondax/filecoin-rs"
+repository = "https://github.com/Zondax/filecoin-signing-tools"
 description =""
 
 [dependencies]
