--- a/signer-ffi/Cargo.toml
+++ b/signer-ffi/Cargo.toml
@@ -16,5 +16,5 @@ description = "Exports filecoin-signer to several languages"
 edition = "2018"
 license = "Apache-2.0"
 name = "filecoin-signer-ffi"
-repository = "https://github.com/Zondax/filecoin-rs"
+repository = "https://github.com/Zondax/filecoin-signing-tools"
 version = "0.1.0"
