--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - run: OUT_DIR=/tmp/objective-c ./.circleci/test_objective-c.sh
       - run: OUT_DIR=/tmp/swift ./.circleci/test_swift.sh
 
-  tests_wasm:
+  tests_npm:
     docker:
       - image: zondax/rust-ci:latest
     steps:
@@ -101,8 +101,8 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
       - run: make deps_npm
       # Disabling Chrome (only Firefox) due to  https://github.com/Zondax/filecoin-signing-tools/issues/68
-      - run: make test_wasm_unit
-      - run: make test_wasm_node
+      - run: make test_npm_unit
+      - run: make test_npm_node
       - save-sccache-cache
       # No need to save this in cache
 
@@ -232,7 +232,7 @@ workflows:
           <<: *no-tags
       - tests_rust:
           <<: *no-tags
-      - tests_wasm:
+      - tests_npm:
           <<: *no-tags
       - tests_ffi:
           <<: *no-tags
@@ -249,7 +249,7 @@ workflows:
           <<: *only-release-tags
       - tests_ffi:
           <<: *only-release-tags
-      - tests_wasm:
+      - tests_npm:
           <<: *only-release-tags
       - tests_service:
           <<: *only-release-tags
@@ -261,7 +261,7 @@ workflows:
 #          requires:
 #            - build
 #            - tests_rust
-#            - tests_wasm
+#            - tests_npm
 #            - tests_service
 
       - npm_publish:
@@ -269,15 +269,6 @@ workflows:
           requires:
             - build
             - tests_rust
-            - tests_wasm
+            - tests_npm
             - tests_service
             - tests_ledger
-
-#      - vuepress_publish:
-#          <<: *only-release-tags
-#          requires:
-#            - build
-#            - tests_rust
-#            - tests_wasm
-#            - tests_service
-#            - tests_ledger
