--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - run: OUT_DIR=/tmp/objective-c ./.circleci/test_objective-c.sh
       - run: OUT_DIR=/tmp/swift ./.circleci/test_swift.sh
 
-  tests_wasm:
+  tests_npm:
     docker:
       - image: zondax/rust-ci:latest
     steps:
@@ -99,10 +99,10 @@ jobs:
       - run: cargo --version
       - restore-sccache-cache
       - run: sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
-      - run: make deps_wasm
-      # Disabling Chrome (only Firefox) due to  https://github.com/Zondax/filecoin-rs/issues/68
-      - run: make test_wasm_unit
-      - run: make test_wasm_node
+      - run: make deps_npm
+      # Disabling Chrome (only Firefox) due to  https://github.com/Zondax/filecoin-signing-tools/issues/68
+      - run: make test_npm_unit
+      - run: make test_npm_node
       - save-sccache-cache
       # No need to save this in cache
 
@@ -135,7 +135,7 @@ jobs:
           name: Install deps wasm
           command: |
             source $HOME/.cargo/env
-            make deps_wasm
+            make deps_npm
       - run: docker pull zondax/builder-zemu
       - run:
           name: Run zemu tests
@@ -192,15 +192,16 @@ jobs:
     steps:
       - checkout
       - restore-sccache-cache
-      - run: make deps_wasm
-      - run: make build_wasm
+      - run: make deps_npm
+      - run: make build_npm
       - run:
           name: Update tag
           command: |
-            cd /home/circleci/project/signer-wasm/pkg
+            cd /home/circleci/project/signer-npm/pkg
             echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > .npmrc
             npm --no-git-tag-version version $CIRCLE_TAG
             npm publish
+
 
   rust_publish:
     docker:
@@ -209,27 +210,6 @@ jobs:
       - checkout
       - restore-sccache-cache
       # TODO: Enable cargo publish
-
-#  vuepress_publish:
-#    docker:
-#      - image: circleci/node:lts
-#    steps:
-#      - checkout
-#      - run: yarn
-#      - run: yarn build
-#      - add_ssh_keys:
-#          fingerprints:
-#            - "19:d8:07:01:0c:64:b4:8b:d1:44:45:39:87:1f:4d:a0"
-#      - run:
-#          name: Install and configure dependencies
-#          command: |
-#            yarn global add gh-pages@2.2.0
-#            git config user.email "ci-build@zondax.ch"
-#            git config user.name "ci-build"
-#      - run:
-#          name: Deploy docs to gh-pages branch
-#          command: |
-#            $(yarn global bin)/gh-pages --message "[skip ci] Updates" --dist docs/.vuepress/dist
 
 no-tags: &no-tags
   filters:
@@ -252,24 +232,14 @@ workflows:
           <<: *no-tags
       - tests_rust:
           <<: *no-tags
-      - tests_wasm:
+      - tests_npm:
           <<: *no-tags
       - tests_ffi:
           <<: *no-tags
-          requires:
-            - build
-            - tests_rust
       - tests_service:
           <<: *no-tags
-          requires:
-            - build
-            - tests_rust
       - tests_ledger:
           <<: *no-tags
-          requires:
-            - build
-            - tests_rust
-            - tests_wasm
 
   release:
     jobs:
@@ -279,7 +249,7 @@ workflows:
           <<: *only-release-tags
       - tests_ffi:
           <<: *only-release-tags
-      - tests_wasm:
+      - tests_npm:
           <<: *only-release-tags
       - tests_service:
           <<: *only-release-tags
@@ -291,7 +261,7 @@ workflows:
 #          requires:
 #            - build
 #            - tests_rust
-#            - tests_wasm
+#            - tests_npm
 #            - tests_service
 
       - npm_publish:
@@ -299,15 +269,6 @@ workflows:
           requires:
             - build
             - tests_rust
-            - tests_wasm
+            - tests_npm
             - tests_service
             - tests_ledger
-
-#      - vuepress_publish:
-#          <<: *only-release-tags
-#          requires:
-#            - build
-#            - tests_rust
-#            - tests_wasm
-#            - tests_service
-#            - tests_ledger
