--- a/signer-npm/Makefile
+++ b/signer-npm/Makefile
@@ -1,3 +1,4 @@
 build:
-	cp package-signer-wasm.json pkg/package.json
+	cp package-signer.json pkg/package.json
 	cp package-signer-wasm-browser.json pkg/browser/package.json
+	cp -r js pkg/
