--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -26,6 +26,8 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.16"
 
 ledger-transport = { git = "https://github.com/Zondax/ledger-rs" }
+ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs" }
+
 zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
 
 # For wasm compiling
