--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,6 +125,7 @@ jobs:
             rm rustup.sh
       - checkout
       - run: git submodule update --init --recursive
+      - run: docker pull zondax/builder-zemu
       - run:
           name: Install node + yarn
           command: |
@@ -201,7 +202,6 @@ jobs:
             echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > .npmrc
             npm --no-git-tag-version version $CIRCLE_TAG
             npm publish
-
 
   rust_publish:
     docker:
