--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,7 +219,7 @@ no-tags: &no-tags
 only-release-tags: &only-release-tags
   filters:
     tags:
-      only: /^v[0-9]+(\.[0-9]+)*/
+      only: /^v[0-9]+(\.[0-9]+)*(-[a-z]+)?$/
     branches:
       ignore: /.*/
 
