--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -34,16 +34,15 @@ arbitrary = { optional = true, features = ["derive"], version = "0.4" }
 ffi-support = { optional = true, version = "0.4" }
 
 # TODO: Update once crates are available
-forest_vm = { git = "https://github.com/zondax/forest", branch="lola/txnid-params-multisig" }
-forest_message = { git = "https://github.com/zondax/forest", branch="lola/txnid-params-multisig" }
-forest_address = { git = "https://github.com/zondax/forest", branch="lola/txnid-params-multisig" }
-forest_encoding = { git = "https://github.com/zondax/forest", branch="lola/txnid-params-multisig" }
-#actor = { git = "https://github.com/zondax/forest", branch="lola/txnid-params-multisig" }
-forest_cid = { git = "https://github.com/zondax/forest", branch="lola/txnid-params-multisig" }
+forest_vm = "0.2.0"
+forest_message = "0.3.0"
+forest_address = "0.2.0"
+forest_encoding = "0.1.1"
+forest_cid = "0.1.0"
 
 # TODO: Maybe we can replace these with something leaner
 tiny-bip39 = "0.7.3"
-num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", branch="lola/txnid-params-multisig"}
+num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.0"}
 
 zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
 
