--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -17,6 +17,9 @@ rayon = "1"
 
 bls-signatures = "0.5.0"
 
+# for unit tests
+regex = "1.3.9"
+
 # Crypto related
 hex = "0.4.2"
 getrandom="0.1.14"
