Commented out a line that was causing a compilation failure
Signed-off-by: Mike Goelzer <mike@protocol.ai>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "signer",
     "signer-ffi",
     "signer-npm",
-    "ledger",
+#    "ledger",
     "hfuzz-signer",
     "extras",
 ]
