--- a/signer-npm/js/.eslintrc.json
+++ b/signer-npm/js/.eslintrc.json
@@ -8,7 +8,8 @@
     "prettier"
   ],
   "extends": [
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "eslint:recommended"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -20,6 +21,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-console": "error"
   }
 }
