Use base64 for privatekey in service too

--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -23,6 +23,7 @@ hex = "0.4"
 lazy_static = "1.4.0"
 libsecp256k1 = "0.3.4"
 blake2b_simd = "0.5.10"
+base64 = "0.12.0"
 
 [dependencies.abscissa_core]
 version = "0.5.2"
