--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -28,7 +28,7 @@ thiserror = "1.0.16"
 ledger-transport = { git = "https://github.com/Zondax/ledger-rs", rev="f7f7affe989ba6a30049637fa92486071bc75df9" }
 ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs", rev="f7f7affe989ba6a30049637fa92486071bc75df9" }
 
-zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs", rev="3524b955bc10dda0c47908cd2e0b857cf83733ad" }
+zx-bip44 = "0.1.0"
 
 # For wasm compiling
 [target.'cfg(target_arch = "wasm32")'.dependencies]
