--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -19,7 +19,7 @@ reqwest = { version = "0.10.6", features = ["json", "gzip"] }
 warp = "0.2.1"
 jsonrpc-core = "14.0.5"
 lru = { optional = true, version = "0.5.3" }
-hex = "0.4"
+hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
 lazy_static = "1.4.0"
 libsecp256k1 = "0.3.4"
 blake2b_simd = "0.5.10"
