--- a/signer-ffi/Cargo.toml
+++ b/signer-ffi/Cargo.toml
@@ -1,7 +1,7 @@
 [dependencies]
 ffi-support = "0.4"
 filecoin-signer = { features = ["with-ffi-support"], path = "../signer" }
-hex = "0.4"
+hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
 jni = { optional = true, version = "0.17" }
 
 [features]
