--- a/signer-npm/Cargo.toml
+++ b/signer-npm/Cargo.toml
@@ -18,7 +18,7 @@ tiny-bip39 = "0.7.3"
 thiserror = "1.0.20"
 serde_json = "1.0.56"
 libsecp256k1 = "0.3.5"
-hex = "0.4.2"
+hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
 base64 = "0.12.3"
 js-sys = "0.3.42"
 wasm-bindgen-futures = "0.4.15"
