--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -18,7 +18,7 @@ rayon = "1"
 bls-signatures = "0.5.0"
 
 # Crypto related
-hex = "0.4.2"
+hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
 getrandom="0.1.14"
 libsecp256k1 = "0.3.5"
 blake2b_simd = "0.5.10"
