--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -15,7 +15,7 @@ serde_json = "1.0"
 serde_cbor = "0.11.1"
 rayon = "1"
 
-bls-signatures = "0.5.0"
+bls-signatures = "0.6.1"
 
 # Crypto related
 hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
@@ -49,7 +49,7 @@ zx-bip44 = "0.1.0"
 extras = { path = "../extras"}
 
 [dev-dependencies]
-rand_xorshift = "0.2.0"
+rand_chacha = "0.2.2"
 rand = "0.7"
 
 [features]
