--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -43,6 +43,7 @@ forest_message = "0.3.0"
 forest_address = "0.2.0"
 forest_encoding = "0.1.1"
 forest_cid = "0.1.0"
+forest_crypto = "0.2.1"
 
 # TODO: Maybe we can replace these with something leaner
 tiny-bip39 = "0.7.3"
