WIP; trying to fix javascript;

--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -22,7 +22,8 @@
   ],
   "dependencies": {
     "@zondax/filecoin-signer": "../../signer-npm/pkg/",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "cids": "^1.0.0"
   },
   "devDependencies": {
     "bip32": "^2.0.5",
