--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -15,6 +15,7 @@
     "blakejs": "^1.1.0",
     "bn.js": "^5.1.2",
     "ipld-dag-cbor": "^0.16.0",
+    "leb128": "0.0.5",
     "secp256k1": "^4.0.1"
   },
   "devDependencies": {
