--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -20,3 +20,5 @@ clock = { git = "https://github.com/chainsafe/forest", rev="2863f64e40fde88433f9
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11.5"
 lazy_static = "1.4.0"
+num-traits = "0.2"
+num-derive = "0.3"
