--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -8,6 +8,7 @@
   "author": "Zondax <info@zondax.ch>",
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^0.20.0",
     "base32-decode": "^1.0.0",
     "base32-encode": "^1.1.1",
     "bip32": "^2.0.5",
@@ -23,7 +24,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.3",
     "prettier": "^2.0.5"
   },
   "eslintConfig": {
