--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -21,9 +21,9 @@
     "filecoin"
   ],
   "dependencies": {
-    "@zondax/filecoin-signer": "../../signer-npm/pkg/",
     "axios": "^0.19.2",
-    "cids": "^1.0.0"
+    "cids": "^1.0.0",
+    "ipld-dag-cbor": "^0.17.0"
   },
   "devDependencies": {
     "bip32": "^2.0.5",
