--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ examples/wasm_node/yarn-error.log
 examples/wasm_browser/yarn.lock
 **/hfuzz_target/
 **/hfuzz_workspace/
+
+examples/private_keys_base64.txt
