Fix Cargo; Fix pure js;

--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -53,9 +53,11 @@ num-traits = "0.2"
 [dev-dependencies]
 rand_chacha = "0.2.2"
 rand = "0.7"
-rustc-serialize = "0.3.24"
 
 [features]
 default = []
 with-arbitrary = ["arbitrary"]
 with-ffi-support = ["ffi-support"]
+
+[patch.crates-io]
+multihash = "0.13.0"
