--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -17,6 +17,7 @@
     "bn.js": "^5.1.2",
     "ipld-dag-cbor": "^0.17.0",
     "leb128": "0.0.5",
+    "lowercase-keys": "^2.0.0",
     "secp256k1": "^4.0.1"
   },
   "devDependencies": {
