centralize test vector (#323)
* Move tests to test_vectors json file for javascript
* Load test vectors file;
* Move test values inside json file;
* Remove NOTES file
* Fix Cargo; Fix pure js;
* Remove patch line (other PR); prettier rules;
* Fix pure js test case;
* prettier..
* update multihash lib
* fix tes with new error message

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ examples/wasm_node/yarn-error.log
 examples/wasm_browser/yarn.lock
 **/hfuzz_target/
 **/hfuzz_workspace/
+
+examples/private_keys_base64.txt
+test_vectors/NOTES.md
